tests/error/modifier_errors/higher_order_controllable_missing_flag.err
Error: Missing protocol implementation (at $FILE:17:18)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_control(dagger_only, q)
   |                   ^^^^^^^^^^^ Type `def dagger_only(q: qubit) -> None` does not implement
   |                               protocol `Controllable[[qubit], None]`

Note: Function `dagger_only` is only declared as `daggerable=True`

Guppy compilation failed due to 1 previous error
